2011-09-28  Jerome Carpenter <romec@unc.edu>
	* mk_video_struct.m:  added.  makes a video struct that contains information about resolution, fps and pixel to micron conversions  
	* vel_field.m: added. takes an "evt" file or a data table and partitions it spatially into a user defined number of x and y bins. it then calculates an average velocity for each bin with eac htracker equally weighted. 	
	* plot_vel_field.m: added. Takes the output of vel_field and plots a quiver plot with a velocity vector for each partitioned region

2011-08-11  Jeremy Cribb <jcribb@email.unc.edu>
	* save_vrpnmatfile.m:  added.  saves tracking data in the original format outputted by vrpnlog2matlab.

2011-08-10  Jeremy Cribb <jcribb@email.unc.edu>
	* save_evtfile.m: now handles empty case.

2011-07-18  Jeremy Cribb <jcribb@email.unc.edu>
	* save_evtfile.m: added unit conversion.

2011-07-13  Jeremy Cribb <jcribb@email.unc.edu>
	* save_evtfile.m:  added. It saves tracking files in evt "edited video tracking" format.

2009-06-15  Jeremy Cribb <jcribb@email.unc.edu>
	* get_mips.m: added mean projection to possibilities in parameter list.
	* raw_mean_subtract.m: fixed transpose bug for subtraction.

2008-11-14  Jeremy Cribb <jcribb@email.unc.edu>
	* .cvsignore: added.
	* balance_pulnix_gains: modified documentation to better match Mathworks convention.
	* clipraw.m: same.
	* enhance_contrast.m: same.
	* get_mips.m: same.
	* imscalebar.m: same.
	* make_pulnix_avi.m: same.
	* mip.m: same.
	* playback_data.m: same.
	* raw2avi.m: same.
	* raw2img.m: same.
	* raw_balance_gain.m: same.
	* raw_flipud.m: same.
	* raw_mean_subtract.m: same.
	* raw_swaplines.m: same.
	* swaplines.m: same.
	* video_psd.m: same.
	
2008-07-07  Jeremy Cribb <jcribb@email.unc.edu>
	* raw2avi.m: added x and y offsets to crop (frame_size) vector.

2007-08-30  Jeremy Cribb <jcribb@email.unc.edu>
	* raw_flipud.m: added.  vertically flips rawfile.

2007-01-26  Jeremy Cribb <jcribb@email.unc.edu>
	* raw2avi.m: fixed typo.