@@ -1,3 +1,6 @@
+2013-03-04 Robert Judith <rjudith@email.unc.edu>
+	* vid_frame_mean.m added. Takes a video (.avi or .raw) and outputs the average intensity per frame.
+
 2011-09-28  Jerome Carpenter <romec@unc.edu>
 	* mk_video_struct.m:  added.  makes a video struct that contains information about resolution, fps and pixel to micron conversions  
 	* vel_field.m: added. takes an "evt" file or a data table and partitions it spatially into a user defined number of x and y bins. it then calculates an average velocity for each bin with eac htracker equally weighted. 	
